--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,9 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
 *.i
+*.json
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
