c2goSource: support Files

--- a/testdata/libc/c2go.cfg
+++ b/testdata/libc/c2go.cfg
@@ -4,7 +4,8 @@
         "dir": "."
     },
     "source": {
-        "dir": ["../printf", "../qsort", "../strlen"]
+        "dirs": ["../printf", "../qsort"],
+        "files": ["../strlen/strlen.c"]
     },
     "include": []
 }
