c2go.cfg: add source.ignore.names

--- a/testdata/libc/c2go.cfg
+++ b/testdata/libc/c2go.cfg
@@ -4,6 +4,9 @@
         "dir": "."
     },
     "source": {
+        "ignore": {
+            "names": ["a_cas"]
+        },
         "dirs": ["../printf", "../qsort"],
         "files": ["../strlen/strlen.c"]
     },
