testdata/helloprj: test include

--- a/testdata/helloprj/c2go.cfg
+++ b/testdata/helloprj/c2go.cfg
@@ -8,5 +8,8 @@
     "deps": [
         "C",
         "github.com/goplus/c2go/testdata/libc"
+    ],
+    "include": [
+        "../libc/src", "."
     ]
 }
