--- a/testdata/libc/c2go.cfg
+++ b/testdata/libc/c2go.cfg
@@ -8,7 +8,7 @@
             "names": ["a_cas"]
         },
         "dirs": ["../printf", "../qsort"],
-        "files": ["../strlen/strlen.c"]
+        "files": ["../strlen/strlen.c", "./src/foo.c"]
     },
-    "include": []
+    "include": ["./src"]
 }
