delete unnamedType include sub-types

--- a/testdata/libc/c2go.cfg
+++ b/testdata/libc/c2go.cfg
@@ -11,7 +11,7 @@
             "names": ["a_cas"]
         },
         "dirs": ["../printf", "../qsort"],
-        "files": ["../strlen/strlen.c", "./src/foo.c"]
+        "files": ["../strlen/strlen.c", "./src/foo.c", "./src/foo2.c"]
     },
     "include": ["./src"]
 }
