--- a/testdata/libc/c2go.cfg
+++ b/testdata/libc/c2go.cfg
@@ -4,7 +4,21 @@
     },
     "target": {
         "name": "libc",
-        "dir": "."
+        "dir": ".",
+        "cmds": [
+            {
+                "dir": "cmd/test_strlen",
+                "deps": [
+                    "C",
+                    "github.com/goplus/c2go/testdata/libc"
+                ],
+                "source": {
+                    "files": [
+                        "./test/strlen.c"
+                    ]
+                }
+            }
+        ]
     },
     "source": {
         "ignore": {
