support bfm = BFM_InLibC

--- a/testdata/libc/c2go.cfg
+++ b/testdata/libc/c2go.cfg
@@ -27,5 +27,6 @@
         "dirs": ["../printf", "../qsort"],
         "files": ["../strlen/strlen.c", "./src/foo.c", "./src/foo2.c"]
     },
-    "include": ["./src"]
+    "include": ["./src"],
+    "libc": true
 }
