isPublicFrom: support relative path

--- a/testdata/libc/c2go.cfg
+++ b/testdata/libc/c2go.cfg
@@ -1,6 +1,9 @@
 {
     "public": {
-        "from": ["size_t.h"]
+        "from": [
+            "size_t.h",
+            "./src/foo.h"
+        ]
     },
     "target": {
         "name": "libc",
